# pre_Cursor

./: .gitignore  BITACORA.md  CHANGELOG.md  GUIA_PASO_A_PASO.md  INVESTIGACION_CURSOR_CLI.md  LICENSE  MANIFEST.in  METODOLOGIA_DESARROLLO.md  PLACEHOLDERS_ANALYSIS.md  QUICKSTART.md  README.md  README_PRINCIPIANTES.md  RESUMEN_INTEGRACION_CURSOR.md  cli.py  config.py  cursor-agent  demo_cli.py  ejemplos_basicos.py  github_description.txt  iniciar.sh  init_project.py  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  roadmap_v1.1.0.md  roadmap_v1.md  run_tests.py  test_bidirectional_integration.py  test_integration_simple.py  test_supervisor_cli.py
.github/workflows/: ci.yml
config/: config.yaml  cursor_supervisor.yaml
docs/: ARQUITECTURA_CURSOR_INTEGRATION.md  CHANGELOG.md  CONTRIBUTING.md  CURSOR_SUPERVISOR.md  INVESTIGACION_CURSOR_CLI.md  METODOLOGIA_DESARROLLO.md  ROADMAP_ACTUAL.md  TEST_SUPERVISOR.md
docs/guides/: GUIA_PASO_A_PASO.md  GUIA_SUPER_SIMPLE.md
examples/: README.md  config_fastapi.yaml  config_python_library.json  ejemplo_fastapi.json  ejemplo_python_library.json  ejemplo_td_mcp.json  ejemplos_uso.py
scripts/: completion.fish  completion.sh
src/: config_loader.py  validator.py
src/pre_cursor/: auto_executor.py  cli.py  cursor_agent_executor.py  cursor_cli_interface.py  cursor_instruction_generator.py  cursor_integration.py  cursor_supervisor.py  feedback_processor.py  models.py  openframeworks_generator.py  test_supervisor.py  test_validator.py  trigger_system.py  unified_supervisor.py
templates/: BITACORA.md.tpl  CMakeLists.txt.tpl  CURSOR_GUIDE.md.tpl  README.md.tpl  README_cpp.md.tpl  README_nodejs.md.tpl  README_td_mcp.md.tpl  TUTORIAL.md.tpl  config_td_mcp.json.tpl  config_td_mcp.py.tpl  modulo_principal.py.tpl  modulo_principal_cpp.cpp.tpl  modulo_principal_cpp.hpp.tpl  modulo_principal_nodejs.js.tpl  modulo_principal_td_mcp.py.tpl  package.json.tpl  requirements.txt.tpl  requirements_td_mcp.txt.tpl  roadmap_v1.md.tpl
tests/: README.md  test_config_loader.py  test_cursor_supervisor.py  test_init_project.py  test_integration.py  test_validator.py
